--- a/core/Makefile
+++ b/core/Makefile
@@ -1914,7 +1914,7 @@ $(INTERNAL_OTA_PACKAGE_TARGET): $(BUILT_TARGET_FILES_PACKAGE) $(DISTTOOLS)
 	   $(if $(OEM_OTA_CONFIG), -o $(OEM_OTA_CONFIG)) \
 	   $(BUILT_TARGET_FILES_PACKAGE) $@
 
-OWNROM_TARGET_PACKAGE := $(PRODUCT_OUT)/OwnROM-$(OWNROM_VERSION).zip
+OWNROM_TARGET_PACKAGE := $(PRODUCT_OUT)/$(OWNROM_VERSION).zip
 
 .PHONY: otapackage ownrom
 otapackage: $(INTERNAL_OTA_PACKAGE_TARGET)
